--- a/gitstats/gitstats.css
+++ b/gitstats/gitstats.css
@@ -6,6 +6,12 @@ body {
 	background-color: #ffffff;
 }
 
+#theme {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+}
+
 dt {
 	font-weight: bold;
 	float: left;
